<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_launch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@android:color/background_light"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="HardcodedText,RtlSymmetry,ContentDescription">

        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="15dp"
            android:text="2 - 0"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_event" />

        <TextView
            android:id="@+id/text_view_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="15dp"
            android:text="Liverpool vs Ath Madrid"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_time_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/time_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_view_date_tag" />

        <TextView
            android:id="@+id/text_view_league_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/league_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_view_time_tag" />

        <TextView
            android:id="@+id/text_view_date_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/date_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_view_score"
            tools:layout_editor_absoluteY="186dp" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20:00:00"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_time_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_time_tag" />

        <TextView
            android:id="@+id/text_view_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UEFA Champions League"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_league_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_league_tag" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2020-03-11"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_date_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_date_tag" />

        <TextView
            android:id="@+id/text_view_season_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/season_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_view_league_tag" />

        <TextView
            android:id="@+id/text_view_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2019-2020"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_season_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_season_tag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>